fix overflow

--- a/src/components/UI/DubleRangePicker/DoubleRangePicker.css
+++ b/src/components/UI/DubleRangePicker/DoubleRangePicker.css
@@ -2,6 +2,7 @@
    position: relative;
    width: 200px;
    height: 50px;
+   padding: 8px 0px;
    overflow-x: hidden;
 }
 
